<resources>
    <string name="app_name">eco_recicla_reto_1_grupo_7</string>
    <string name="name_app">ECO-Recicla</string>
    <string name="welcome_home">Bienvenid@!</string>
    <string name="text_ic_tips_home">Consejos</string>
    <string name="text_icon_clean_points_home">Puntos\nde Reciclaje</string>
    <string name="text_icon_challenges_achievements_home">Desafíos\ny Logros</string>
    <string name="text_ic_info_home">Info App</string>
    <string name="login_home">Iniciar sesión</string>
    <string name="signup_home">Registrarse</string>
    <string name="title_clean_points">Puntos Limpios</string>
    <string name="title_estatistics">Estadísticas</string>
    <string name="accumulate_points">100</string>
    <string name="label_accumulate_points">Puntos acumulados</string>
    <string name="textV_title_card">Promedio reciclado por categoría</string>
    <string name="textV_title_card_2">Cantidad reciclada durante el año</string>
    <string name="textV_title_card_3">Puntos ganados por año</string>
    <string name="textV_title_card_4">Cantidad reciclada durante el mes</string>
    <string name="textV_title_card_5">Cantidad reciclada en la semana</string>
    <string name="textV_title_card_6">Puntos ganados en el mes</string>
    <string name="textV_title_card_7">Puntos ganados en la semana</string>
    <string name="categorias_app">Categorías</string>
    <string name="textV_reciclar_aceite_card_consejos">¿Cómo reciclar el aceite?</string>
    <string name="textV_reciclar_plastico_card_consejos">¿Como reciclar plastico en una (1) botella?</string>
    <string name="textV_reciclar_compost_card_consejos">¿Cómo hacer compost casero?</string>
    <string name="textV_reciclar_prendas_card_consejos">¿Cómo darle una segunda oportunidad a tus prendas?</string>
    <string name="consejos_app">Consejos</string>
    <string name="principal_app">Eco-Recicla</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="btn_login">Login</string>
    <string name="description_imageView_background">Imagen de fondo de la pantalla registro de usuario.</string>
    <string name="description_float_button">Boton cerrar esta pantalla, ir pantalla Home.</string>
    <string name="label_btn_user_register">Crear cuenta</string>
    <string name="title_form_user_register">Regístrate!</string>
    <string name="contentDescription_image_logo">imagen de logo de aplicación eco-recicla</string>
    <string name="hint_name_user_register">Nombre</string>
    <string name="hint_email_user_register">Email</string>
    <string name="hint_confirm_email_user_register">Confirmar email</string>
    <string name="hint_password_user_register">Contraseña</string>
    <string name="hint_confirm_password_user_register">Confirmar contraseña</string>
    <string name="terminos_condiciones_user_register">Acepto términos y condiciones.</string>
    <string name="privacidad_user_register">Acepto políticas de privacidad y manejo de datos.</string>
    <string name="tienes_cuenta_user_register">¿Ya tienes cuenta? Inicia sesión.</string>
</resources>