<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RegistroUsario">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:src="@drawable/img_1"
        android:scaleType="matrix"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/description_imageView_background"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_cerrar"
        style=" @style/ShapeAppearance.App.SmallComponent"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/description_float_button"
        android:backgroundTint="#262D8023" />

    <TextView
        android:id="@+id/tv_title_user_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="244dp"
        android:text="@string/title_form_user_register"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="32sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone" />


    <ImageView
        android:id="@+id/logo_clean_points"
        android:layout_width="84dp"
        android:layout_height="78dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="end"
        android:layout_marginTop="194dp"
        android:layout_marginStart="280dp"
        android:src="@drawable/ic_logo_app"
        android:contentDescription="@string/contentDescription_image_logo"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="430dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="292dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="335dp"
                android:layout_height="50dp"
                app:cardCornerRadius="20dp">

                <EditText
<<<<<<< HEAD
                    android:id="@+id/name_user_register"
                    android:layout_width="340dp"
=======
                    android:id="@+id/et_nombre"
                    android:layout_width="match_parent"
>>>>>>> 7dd5f25cb51281247a50b3985d00ac25ea33fef6
                    android:layout_height="match_parent"
                    android:background="@color/grey_app"
                    android:hint="@string/hint_name_user_register"
                    android:inputType="textPersonName"
                    android:autofillHints="name"
                    android:textColorHint="@color/beige_app"
                    android:paddingHorizontal="16dp"
                    android:textColor="@color/beige_app"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="335dp"
                android:layout_height="50dp"
                android:layout_marginTop="22dp"
                app:cardCornerRadius="20dp">

                <EditText
<<<<<<< HEAD
                    android:id="@+id/email_user_register"
                    android:layout_width="340dp"
=======
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
>>>>>>> 7dd5f25cb51281247a50b3985d00ac25ea33fef6
                    android:layout_height="match_parent"
                    android:background="@color/grey_app"
                    android:hint="@string/hint_email_user_register"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/beige_app"
                    android:paddingHorizontal="16dp"
                    android:textColor="@color/beige_app"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="335dp"
                android:layout_height="50dp"
                android:layout_marginTop="22dp"
                app:cardCornerRadius="20dp">

                <EditText
<<<<<<< HEAD
                    android:id="@+id/confirm_email_user_register"
                    android:layout_width="340dp"
=======
                    android:id="@+id/et_usuario"
                    android:layout_width="match_parent"
>>>>>>> 7dd5f25cb51281247a50b3985d00ac25ea33fef6
                    android:layout_height="match_parent"
                    android:background="@color/grey_app"
                    android:hint="@string/hint_confirm_email_user_register"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="16dp"
                    android:textColorHint="@color/beige_app"
                    android:autofillHints="emailAddress"
                    android:textColor="@color/beige_app"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="335dp"
                android:layout_height="50dp"
                android:layout_marginTop="22dp"
                app:cardCornerRadius="20dp">

                <EditText
<<<<<<< HEAD
                    android:id="@+id/password_user_register"
                    android:layout_width="340dp"
=======
                    android:id="@+id/et_contraseña"
                    android:layout_width="match_parent"
>>>>>>> 7dd5f25cb51281247a50b3985d00ac25ea33fef6
                    android:layout_height="match_parent"
                    android:background="@color/grey_app"
                    android:hint="@string/hint_password_user_register"
                    android:inputType="textPassword"
                    android:paddingHorizontal="16dp"
                    android:autofillHints="password"
                    android:textColorHint="@color/beige_app"
                    android:textColor="@color/beige_app"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="335dp"
                android:layout_height="50dp"
                android:layout_marginTop="22dp"
                app:cardCornerRadius="20dp">

                <EditText
<<<<<<< HEAD
                    android:id="@+id/confirm_password_user_register"
                    android:layout_width="340dp"
=======
                    android:id="@+id/et_confirmar_contraseña"
                    android:layout_width="match_parent"
>>>>>>> 7dd5f25cb51281247a50b3985d00ac25ea33fef6
                    android:layout_height="match_parent"
                    android:background="@color/grey_app"
                    android:autofillHints="password"
                    android:hint="@string/hint_confirm_password_user_register"
                    android:inputType="textPassword"
                    android:paddingHorizontal="16dp"
                    android:textColorHint="@color/beige_app"
                    android:textColor="@color/beige_app"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <CheckBox
                android:id="@+id/checkbox_terminos_condiciones"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/terminos_condiciones_user_register"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkbox_privacidad"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:text="@string/privacidad_user_register"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_registar_usuario"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/beige_app"
                android:text="@string/label_btn_user_register"
                android:textColor="@color/green_app"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ya_tiene_cuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tienes_cuenta_user_register"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>